fix: add word-break on html tag

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -88,6 +88,7 @@
   background-color: $default;
   color: $font-white;
   font-weight: 400;
+  hyphens: auto;
   transition: all .3s ease-in-out;
 }
 
